--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
 
     <application
         android:allowBackup="true"
@@ -58,7 +60,15 @@
             </intent-filter>
         </activity>
 
-        <service android:name="com.infinity.service.ClockService"></service>
+        <activity
+            android:name="com.infinity.clock.InfoActivity"
+            android:theme="@android:style/Theme.Dialog"
+            android:label="iCook Alarm">
+
+        </activity>
+
+        <service android:name="com.infinity.clock.MyAlarmService" />
+
     </application>
 
 </manifest>
