--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,16 +17,15 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:windowSoftInputMode="adjustResize"
             android:name=".Home"
-            android:label="@string/app_name" >
-
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustResize" >
         </activity>
         <activity
             android:name=".DishDetailActivity"
             android:label="@string/title_activity_dish_detail"
             android:parentActivityName=".Home"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.infinity.icook.Home" />
@@ -35,7 +34,7 @@
             android:name=".ManagerUser"
             android:label="@string/title_activity_manager_user"
             android:parentActivityName=".Home"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.infinity.icook.Home" />
@@ -44,7 +43,7 @@
             android:name=".ClockActivity"
             android:label="@string/title_activity_clock"
             android:parentActivityName=".Home"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.infinity.icook.Home" />
@@ -52,23 +51,30 @@
         <activity
             android:name=".SqlashScreen"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.infinity.clock.InfoActivity"
-            android:theme="@android:style/Theme.Dialog"
-            android:label="iCook Alarm">
-
+            android:label="iCook Alarm"
+            android:theme="@android:style/Theme.Dialog" >
         </activity>
 
         <service android:name="com.infinity.clock.MyAlarmService" />
 
+        <activity
+            android:name=".AddUser"
+            android:label="@string/title_activity_add_user"
+            android:parentActivityName=".ManagerUser"
+            android:theme="@style/AppTheme.NoActionBar" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.infinity.icook.ManagerUser" />
+        </activity>
     </application>
 
 </manifest>
