--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:name=".DishDetailActivity"
             android:label="@string/title_activity_dish_detail"
             android:parentActivityName=".Home"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.infinity.icook.Home" />
@@ -35,7 +35,7 @@
             android:name=".ManagerUser"
             android:label="@string/title_activity_manager_user"
             android:parentActivityName=".Home"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.infinity.icook.Home" />
@@ -44,7 +44,7 @@
             android:name=".ClockActivity"
             android:label="@string/title_activity_clock"
             android:parentActivityName=".Home"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.infinity.icook.Home" />
@@ -52,7 +52,7 @@
         <activity
             android:name=".SqlashScreen"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -71,7 +71,7 @@
             android:name=".AddUser"
             android:label="@string/title_activity_add_user"
             android:parentActivityName=".ManagerUser"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.infinity.icook.ManagerUser" />
@@ -79,7 +79,7 @@
         <activity
             android:name="com.infinity.clock.MoreInfoActivity"
             android:label="Notification"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme" />
 
         <receiver
             android:name="com.infinity.clock.BootReceiver"
@@ -91,8 +91,13 @@
 
         <activity
             android:name=".SettingActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme">
         </activity>
+
+        <activity
+            android:name=".Intro"
+            android:theme="@style/AppTheme" />
+
     </application>
 
 </manifest>
